--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,16 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up{% endblock title %}
+{% block title %}Signup{% endblock title %}
 
 {% block content %}
-    <main>
-        <div>
             <h1>Signup</h1>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button>Signup</button>
             </form>
-        </div>
-    </main>
 {% endblock content %}
