--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -10,7 +10,35 @@
         </title>
     </head>
     <body>
-        {% block content %}
-        {% endblock content %}
+        <header>
+            <nav>
+                <ul>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url "show_my_tasks" %}">My tasks</a>
+                        </li>
+                        <li>
+                            <a href="{% url "list_projects" %}">My projects</a>
+                        </li>
+                        <li>
+                            <a href="{% url "logout" %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{% url "login" %}">Login</a>
+                        </li>
+                        <li>
+                            <a href="{% url "signup" %}">Signup</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div>
+                {% block content %}
+                {% endblock content %}
+            </div>
+        </main>
     </body>
 </html>
