--- a/projects/templates/projects/create.html
+++ b/projects/templates/projects/create.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Create a new project{% endblock title %}
-
+{% block title %}
+    Create a new project
+{% endblock title %}
 {% block content %}
-            <h1>Create a new project</h1>
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button>Create</button>
-            </form>
+    <h1>Create a new project</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button>Create</button>
+    </form>
 {% endblock content %}
