--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,31 +1,32 @@
 {% extends "base.html" %}
 
-{% block title %}My Tasks{% endblock title %}
-
+{% block title %}
+    My Tasks
+{% endblock title %}
 {% block content %}
-            <h1>My Tasks</h1>
-            {% if task_list|length != 0 %}
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Start date</th>
-                        <th>Due date</th>
-                        <th>Is completed</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for task in task_list %}
+    <h1>My Tasks</h1>
+    {% if task_list|length != 0 %}
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Start date</th>
+                    <th>Due date</th>
+                    <th>Is completed</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for task in task_list %}
                     <tr>
                         <td>{{ task.name }}</td>
                         <td>{{ task.start_date }}</td>
                         <td>{{ task.due_date }}</td>
                         <td>{{ task.is_completed|yesno }}</td>
                     </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            {% else %}
-                <p>You have no tasks</p>
-            {% endif %}
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>You have no tasks</p>
+    {% endif %}
 {% endblock content %}
