--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -8,7 +8,7 @@
     <p>
         <a href="{% url "create_project" %}">Create a new project</a>
     </p>
-    {% if project_list|length == 0 %}
+    {% if projects|length == 0 %}
         <p>You are not assigned to any projects</p>
     {% else %}
         <table>
@@ -19,7 +19,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for project in project_list %}
+                {% for project in projects %}
                     <tr>
                         <td>
                             <a href="{% url "show_project" project.id %}">{{ project.name }}</a>
