--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -10,7 +10,7 @@
     <p>
         <a href="{% url "create_task" %}">Create a new task</a>
     </p>
-    {% if project.tasks.all|length != 0 %}
+    {% if project.tasks.all %}
         <table>
             <thead>
                 <tr>
