--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <h1>My Tasks</h1>
-    {% if tasks %}
+    {% if tasks|length != 0 %}
         <table>
             <thead>
                 <tr>
