--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,13 +1,128 @@
-{% extends "base.html" %}
+{% load static %}
 
-{% block title %}
-    Signup
-{% endblock title %}
-{% block content %}
-    <h1>Signup</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Signup</button>
-    </form>
-{% endblock content %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sign Up</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+              crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="{% static "css/sign-in-or-up.css" %}">
+    </head>
+    <body>
+        <header class="text-light py-5 mb-5 px-5 pg-lg-0 pt-lg-5 text-center"
+                style="background-color: rgb(74, 44, 95)">
+            <div class="container">
+                <h1>Sign Up</h1>
+                <p>
+                    Already have an account? <a href="{% url "login" %}">Login</a>
+                </p>
+            </div>
+        </header>
+        <section class="text-center">
+            <div class="container">
+                <div class="row align-items-center text-start justify-content-center mb-5 pb-5">
+                    <div class="card position-absolute py-3 shadow-sm"
+                         style="width: 500px;
+                                margin-top: 490px">
+                        <div class="card-body">
+                            <form method="post">
+                                {% csrf_token %}
+                                {% if form.errors %}
+                                    <div class="text-muted text-center mb-2">
+                                        <strong>Holy guacamole!</strong>
+                                        {% if form.username.errors %}This username is already taken.{% endif %}
+                                        {% if form.password.errors %}The passwords do not match.{% endif %}
+                                        {% if form.email.errors %}This email has already been registered.{% endif %}
+                                    </div>
+                                {% endif %}
+                                <div>
+                                    <label for="id_username" class="form-label">
+                                        <span class="text-danger">*</span> Username:
+                                    </label>
+                                    <input type="text"
+                                           name="username"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_username"
+                                           placeholder="Username"
+                                           class="form-control mb-3">
+                                </div>
+                                <div>
+                                    <label for="id_password" class="form-label">
+                                        <span class="text-danger">*</span> Password:
+                                    </label>
+                                    <input type="password"
+                                           name="password"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_password"
+                                           placeholder="Password"
+                                           class="form-control mb-3">
+                                </div>
+                                <div>
+                                    <label for="id_password_confirmation" class="form-label">
+                                        <span class="text-danger">*</span> Password confirmation:
+                                    </label>
+                                    <input type="password"
+                                           name="password_confirmation"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_password_confirmation"
+                                           placeholder="Confirm password"
+                                           class="form-control mb-3">
+                                </div>
+                                <div>
+                                    <label for="id_first_name" class="form-label">
+                                        <span class="text-danger">*</span> First name:
+                                    </label>
+                                    <input type="text"
+                                           name="first_name"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_first_name"
+                                           placeholder="First name"
+                                           class="form-control mb-3">
+                                </div>
+                                <div>
+                                    <label for="id_last_name" class="form-label">
+                                        <span class="text-danger">*</span> Last name:
+                                    </label>
+                                    <input type="text"
+                                           name="last_name"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_last_name"
+                                           placeholder="Last name"
+                                           class="form-control mb-3">
+                                </div>
+                                <div>
+                                    <label for="id_email" class="form-label">
+                                        <span class="text-danger">*</span> Email:
+                                    </label>
+                                    <input type="email"
+                                           name="email"
+                                           maxlength="150"
+                                           required=""
+                                           id="id_email"
+                                           placeholder="Email"
+                                           class="form-control mb-3">
+                                </div>
+                                <div class="d-grid mt-4 mb-2">
+                                    <button class="btn text-white">Sign up</button>
+                                </div>
+                                <span class="text-danger mb-4">*</span> Required field
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
+</html>
