--- a/accounts/templates/accounts/user-profile/edit.html
+++ b/accounts/templates/accounts/user-profile/edit.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Create a New Project
+    Edit My Profile
 {% endblock title %}
 {% block content %}
     <section class="text-light p-5 pg-lg-0 pt-lg-5 mb-5 text-center"
              style="background-color: rgb(74, 44, 95)">
         <div class="container-fluid">
-            <h1>Create a New Project</h1>
+            <h1>Edit My Profile</h1>
         </div>
     </section>
     <section class="py-5">
@@ -15,13 +15,14 @@
             <div class="row align-items-center justify-content-center py-5">
                 <div class="card position-absolute py-4 shadow-sm"
                      style="width: 500px;
-                            margin-top: 310px">
+                            margin-top: 375px">
                     <div class="card-body">
                         <form method="post">
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            {{ uform.as_p }}
+                            {{ pform.as_p }}
                             <div class="d-grid mt-4 mb-3">
-                                <button class="btn purple-button text-white">Create</button>
+                                <button class="btn purple-button text-white">Edit</button>
                             </div>
                         </form>
                     </div>
