--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,37 +10,160 @@
             {% block title %}
             {% endblock title %}
         </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+              crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="{% static "css/style.css" %}">
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    {% if user.is_authenticated %}
-                        <li>
-                            <a href="{% url "show_my_tasks" %}">My tasks</a>
-                        </li>
-                        <li>
-                            <a href="{% url "list_projects" %}">My projects</a>
-                        </li>
-                        <li>
-                            <a href="{% url "logout" %}">Logout</a>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="{% url "login" %}">Login</a>
-                        </li>
-                        <li>
-                            <a href="{% url "signup" %}">Signup</a>
-                        </li>
-                    {% endif %}
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark py-2 fixed-top"
+                 style="background-color: rgb(74, 44, 95)">
+                {% if user.is_authenticated %}
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="{% url "list_all_projects" %}">pr <i class="bi bi-check-circle text-warning"></i> ma</a>
+                        <button class="navbar-toggler"
+                                type="button"
+                                data-bs-toggle="offcanvas"
+                                data-bs-target="#navmenu">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="offcanvas offcanvas-end text-white"
+                             tabindex="-1"
+                             id="navmenu"
+                             style="background-color: rgb(74, 44, 95)">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="navmenuDarkNavbarLabel">
+                                    <a class="navbar-brand" href="{% url "list_all_projects" %}">pr <i class="bi bi-check-circle text-warning"></i> ma</a>
+                                </h5>
+                                <button type="button"
+                                        class="btn-close btn-close-white"
+                                        data-bs-dismiss="offcanvas"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav align-items-lg-center justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-link">
+                                        <form class="d-flex justify-content-center" role="search">
+                                            <div class="input-group input-group-sm">
+                                                <input id="search-input"
+                                                       class="form-control text-light"
+                                                       type="search"
+                                                       placeholder="Search"
+                                                       aria-label="Search"
+                                                       aria-describedby="button-addon2">
+                                                <button id="search-button"
+                                                        class="btn btn-outline-light"
+                                                        id="button-addon2"
+                                                        type="button">
+                                                    <i class="bi bi-search"></i>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle"
+                                           href="#"
+                                           role="button"
+                                           data-bs-toggle="dropdown"><i class="bi bi-pencil-fill me-1"></i> Create</a>
+                                        <ul class="dropdown-menu dropdown-menu-dark"
+                                            style="background-color: rgb(142, 122, 157, 0.9)">
+                                            <li>
+                                                <a class="dropdown-item" href="{% url "create_project" %}">New Project</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="{% url "create_task" %}">New Task</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle"
+                                           href="#"
+                                           role="button"
+                                           data-bs-toggle="dropdown"><i class="bi bi-person-fill me-1"></i> My Profile</a>
+                                        <ul class="dropdown-menu dropdown-menu-dark"
+                                            style="background-color: rgb(142, 122, 157, 0.9)">
+                                            <li>
+                                                <a class ="dropdown-item" href="{% url "show_my_tasks" %}">My Tasks</a>
+                                            </li>
+                                            <li>
+                                                <a class ="dropdown-item" href="{% url "list_my_projects" %}">My Projects</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="{% url "view_my_profile" %}">View My Profile</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="{% url "edit_user_profile" %}">Edit My Profile</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link"
+                                           href="#"
+                                           data-bs-toggle="modal"
+                                           data-bs-target="#logout"><i class="bi bi-box-arrow-left me-1"></i> Logout</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </nav>
         </header>
         <main>
-            <div>
-                {% block content %}
-                {% endblock content %}
-            </div>
+            {% block content %}
+            {% endblock content %}
         </main>
+        <!-- Logout Modal -->
+        <div class="modal fade"
+             id="logout"
+             tabindex="-1"
+             aria-labelledby="logoutLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5 text-center">Are you sure?</div>
+                    <div class="modal-footer">
+                        <button type="button"
+                                class="btn btn-warning text-white"
+                                data-bs-dismiss="modal">No</button>
+                        <a href="{% url "logout" %}">
+                            <button type="button" class="btn btn-outline-secondary">Yes</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="p-5 bg-body-tertiary text-secondary text-center position-relative">
+            <div class="container">
+                <div class="lead">
+                    Copyright &copy; 2023 <i class="bi bi-dot"></i> pr <i class="bi bi-check-circle"></i> ma
+                </div>
+                <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                    <i class="bi bi-arrow-up-circle text-secondary h2"></i>
+                </a>
+            </div>
+        </footer>
+        <!-- JS Script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+                crossorigin="anonymous"></script>
+        <script>
+            const searchButton = document.getElementById('search-button');
+            const searchInput = document.getElementById('search-input');
+            searchButton.addEventListener('click', () => {
+                const inputValue = searchInput.value;
+                alert(inputValue);
+            });
+        </script>
     </body>
 </html>
