--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -264,8 +264,9 @@
                              id="nav-editproject"
                              role="tabpanel"
                              tabindex="0">
-                            <div class="row">
-                                <div class="col-10 position-relative top-0 start-50 translate-middle">
+                            <div class="row justify-content-center">
+                                <div class="col-10">
+                                    <!--  position-relative top-0 start-50 translate-middle -->
                                     <div class="card shadow-sm">
                                         <div class="card-body">
                                             <form method="post">
