--- a/accounts/templates/accounts/user-profile/mine.html
+++ b/accounts/templates/accounts/user-profile/mine.html
@@ -7,9 +7,9 @@
     <section class="text-light p-5 pg-lg-0 pt-lg-5 text-center"
              style="background-color: rgb(74, 44, 95)">
         <div class="container-fluid">
-            <div>
+            <div class="d-grid justify-content-center">
                 {% if request.user.userprofile.picture %}
-                    <img src="{{ request.user.userprofile.picture }}" alt="profile picture">
+                    <div class="center-cropped rounded-circle mb-4" style="background-image: url('{{MEDIA_URL}} {{ request.user.userprofile.picture.url }}');"></div>
                 {% else %}
                     <img src="https://www.kravemarketingllc.com/wp-content/uploads/2018/09/placeholder-user-500x500.png"
                          alt=""
